<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_normal"
        app:strokeColor="@color/color_on_surface_alpha_10"
        app:strokeWidth="@dimen/card_stroke_width"
        app:cardElevation="@dimen/card_elevation"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/posterPhoto"
                android:layout_width="@dimen/post_photo_size"
                android:layout_height="@dimen/post_photo_size"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_medium"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize50Percent"
                app:srcCompat="@drawable/placeholder" />

            <TextView
                android:id="@+id/postTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:layout_marginStart="@dimen/margin_normal"
                app:layout_constraintBottom_toBottomOf="@id/posterPhoto"
                app:layout_constraintStart_toEndOf="@id/posterPhoto"
                app:layout_constraintTop_toTopOf="@id/posterPhoto"
                app:layout_constraintVertical_bias="0.12" />

            <TextView
                android:id="@+id/byText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_post_by"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintTop_toBottomOf="@id/postTitle"
                app:layout_constraintStart_toStartOf="@id/postTitle" />

            <TextView
                android:id="@+id/postedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Organization name"
                android:layout_marginStart="@dimen/margin_small"
                android:textAppearance="?attr/textAppearanceCaption"
                app:layout_constraintBaseline_toBaselineOf="@id/byText"
                app:layout_constraintStart_toEndOf="@id/byText" />

            <TextView
                android:id="@+id/timePosted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3:00 PM"
                android:textAppearance="?attr/textAppearanceCaption"
                android:layout_marginStart="@dimen/margin_small"
                app:layout_constraintBaseline_toBaselineOf="@id/postedBy"
                app:layout_constraintStart_toEndOf="@id/postedBy" />

            <TextView
                android:id="@+id/agoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_post_ago"
                android:textAppearance="?attr/textAppearanceCaption"
                android:layout_marginStart="@dimen/margin_small"
                app:layout_constraintBaseline_toBaselineOf="@id/timePosted"
                app:layout_constraintStart_toEndOf="@id/timePosted" />

            <TextView
                android:id="@+id/postBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:layout_constraintTop_toBottomOf="@id/posterPhoto"
                app:layout_constraintStart_toStartOf="@id/posterPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/postPhoto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/placeholder"
                android:adjustViewBounds="true"
                android:layout_marginTop="@dimen/margin_normal"
                app:layout_constraintTop_toBottomOf="@id/postBody"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />



            <Button
                android:id="@+id/heartButton"
                style="@style/Entmaa.Button.TextButton.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/margin_medium"
                app:icon="@drawable/ic_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postPhoto"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/commentsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_comment"
                tools:text="13"
                style="@style/Entmaa.Button.TextButton.Caption"
                android:layout_marginStart="@dimen/margin_large"
                app:layout_constraintBaseline_toBaselineOf="@id/heartButton"
                app:layout_constraintStart_toEndOf="@id/heartButton"
                />


            <Button
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_share"
                style="@style/Entmaa.Button.IconButton"
                android:layout_marginStart="@dimen/margin_large"
                app:layout_constraintBaseline_toBaselineOf="@id/commentsButton"
                app:layout_constraintStart_toEndOf="@id/commentsButton"
                />


            <Button
                android:id="@+id/volunteerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_event_volunteer_btn"
                android:layout_marginEnd="@dimen/margin_normal"
                app:layout_constraintBaseline_toBaselineOf="@id/shareButton"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/detailsButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:minWidth="0dp"
                android:text="@string/event_request_item_btn"
                app:layout_constraintBaseline_toBaselineOf="@id/volunteerButton"
                app:layout_constraintEnd_toStartOf="@id/volunteerButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</layout>



